Anasayfa düzenlemeleri yapıldı view kısmı ve mimaride kalan kısımlar düzenlendi. Dependency Injection yenilendi.

--- a/ShortMovieUI/Views/MovieHome/Index.cshtml
+++ b/ShortMovieUI/Views/MovieHome/Index.cshtml
@@ -52,8 +52,8 @@
 				</div>
 				<div class="tabs">
 					<ul class="tab-links-2">
-						<li class="active"><a href="#tab21">#EnKısa</a></li>
-						<li ><a href="#tab22"> #EnUzun</a></li>
+						<li><a href="#tab21">#EnKısa</a></li>
+						<li class="active" ><a href="#tab22"> #EnUzun</a></li>
 						<li><a href="#tab23"> # EnYeni</a></li>
 						<li><a href="#tab24"> #EnEski</a></li>
 					</ul>
