--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeDirectors/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeDirectors/Default.cshtml
@@ -7,7 +7,7 @@
 		<div class="celeb-item">
 			<a href="#"><img src="~/Film-Review-Movie-Database/images/uploads/ava1.jpg" alt="" width="70" height="70"></a>
 			<div class="celeb-author">
-				<h6><a href="#">Samuel N. Jack</a></h6>
+				<h6><a href="#">@item.DirectorNameSurname</a></h6>
 				<span>Actor</span>
 			</div>
 		</div>
