--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeLong/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeLong/Default.cshtml
@@ -10,13 +10,15 @@
 				<div class="slide-it">
 					<div class="movie-item">
 						<div class="mv-img">
-							<img src="~/Film-Review-Movie-Database/images/uploads/mv-item5.jpg" alt="" width="185" height="284">
+							<div style="padding:5px; width:185px; height:284px;">
+								<img src="@item.MovieImage" alt="" style="width:100%; height:100%; object-fit:cover;">
+							</div>
 						</div>
 						<div class="hvr-inner">
 							<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
 						</div>
 						<div class="title-in">
-							<h6><a href="#">Interstellar</a></h6>
+							<h6><a href="#">@item.MovieName</a></h6>
 							<p><i class="ion-android-star"></i><span>7.4</span> /10</p>
 						</div>
 					</div>
