Kategorilere ayrılmış film ve kategori sayfası yapıldı.

--- a/ShortMovieUI/Views/MovieDetail/Movie.cshtml
+++ b/ShortMovieUI/Views/MovieDetail/Movie.cshtml
@@ -10,7 +10,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="hero-ct">
-					<h1 class="animate__animated animate__bounceInDown animate__delay-1s	"> Film Sayfası</h1>
+					<h1 class="animate__animated animate__bounceInDown 	"> Film Sayfası</h1>
 					
 				</div>
 			</div>
@@ -19,11 +19,12 @@
 </div>
 <!-- blog detail section-->
 <div class="page-single" style="margin:0px; padding:0px;">
+	<br />
 	<div class="container">
 		<div class="row">
 			<div class="col-md-9 col-sm-12 col-xs-12">
 				<div class="blog-detail-ct">
-					<h1 class="animate__animated animate__slideInLeft animate__delay-1s" >@Model.MovieName</h1>
+					<h1 class="animate__animated animate__slideInLeft " >@Model.MovieName</h1>
 					<span class="time">@Model.MovieDate</span>
 					<iframe width="900" height="500" src="@Model.MovieLink" title="@Model.MovieName" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>			
 					<br /><br />
