Hakkımızda kısmı genel bitti bir kısım kaldı

--- a/ShortMovieUI/Views/Shared/MovieLayout.cshtml
+++ b/ShortMovieUI/Views/Shared/MovieLayout.cshtml
@@ -138,69 +138,40 @@
 						<li class="hidden">
 							<a href="#page-top"></a>
 						</li>
-						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown">
-								Home <i class="fa fa-angle-down" aria-hidden="true"></i>
+					 <li class="dropdown first">
+							<a asp-action="Index" asp-controller="MovieHome" class="btn btn-default dropdown-toggle lv1">
+								Anasayfa &nbsp;<i class="fa fa-solid fa-house"></i>
 							</a>
-							<ul class="dropdown-menu level1">
-								<li><a href="index-2.html">Home 01</a></li>
-								<li><a href="homev2.html">Home 02</a></li>
-								<li><a href="homev3.html">Home 03</a></li>
-							</ul>
+
 						</li>
 						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-								movies<i class="fa fa-angle-down" aria-hidden="true"></i>
+							<a asp-action="About" asp-controller="MovieHome" class="btn btn-default dropdown-toggle lv1">
+								Hakkımızda &nbsp;<i class="fa fa-solid fa-masks-theater"></i>
 							</a>
-							<ul class="dropdown-menu level1">
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Movie grid<i class="ion-ios-arrow-forward"></i></a>
-									<ul class="dropdown-menu level2">
-										<li><a href="moviegrid.html">Movie grid</a></li>
-										<li><a href="moviegridfw.html">movie grid full width</a></li>
-									</ul>
-								</li>
-								<li><a href="movielist.html">Movie list</a></li>
-								<li><a href="moviesingle.html">Movie single</a></li>
-								<li class="it-last"><a href="seriessingle.html">Series single</a></li>
-							</ul>
+							
 						</li>
 						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-								celebrities <i class="fa fa-angle-down" aria-hidden="true"></i>
+							<a asp-action="Categories" asp-controller="MovieCategory" class="btn btn-default dropdown-toggle lv1" >
+								Kategoriler  &nbsp;<i class="fa-solid fa-list"></i>
 							</a>
-							<ul class="dropdown-menu level1">
-								<li><a href="celebritygrid01.html">celebrity grid 01</a></li>
-								<li><a href="celebritygrid02.html">celebrity grid 02 </a></li>
-								<li><a href="celebritylist.html">celebrity list</a></li>
-								<li class="it-last"><a href="celebritysingle.html">celebrity single</a></li>
-							</ul>
+							
 						</li>
 						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-								news <i class="fa fa-angle-down" aria-hidden="true"></i>
+							<a asp-action="Mood" asp-controller="MovieMood"  class="btn btn-default dropdown-toggle lv1" >
+								Mood &nbsp;<i class="fa fa-solid fa-face-smile"></i>
 							</a>
-							<ul class="dropdown-menu level1">
-								<li><a href="bloglist.html">blog List</a></li>
-								<li><a href="bloggrid.html">blog Grid</a></li>
-								<li class="it-last"><a href="blogdetail.html">blog Detail</a></li>
-							</ul>
+							
 						</li>
 						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
-								community <i class="fa fa-angle-down" aria-hidden="true"></i>
+							<a asp-action ="ContactUs" asp-controller="MovieContact" class="btn btn-default dropdown-toggle lv1" >
+								İletişim &nbsp;<i class="fa-solid fa-message"></i>
 							</a>
-							<ul class="dropdown-menu level1">
-								<li><a href="userfavoritegrid.html">user favorite grid</a></li>
-								<li><a href="userfavoritelist.html">user favorite list</a></li>
-								<li><a href="userprofile.html">user profile</a></li>
-								<li class="it-last"><a href="userrate.html">user rate</a></li>
-							</ul>
+							
 						</li>
 					</ul>
 					<ul class="nav navbar-nav flex-child-menu menu-right">
 						<li class="dropdown first">
-							<a class="btn btn-default dropdown-toggle lv1" data-toggle="dropdown" data-hover="dropdown">
+							<a class="btn btn-default dropdown-toggle lv1" >
 								pages <i class="fa fa-angle-down" aria-hidden="true"></i>
 							</a>
 							<ul class="dropdown-menu level1">
