Anasayfa genel düzenlemeler yapıldı .

--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeLong/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeLong/Default.cshtml
@@ -15,11 +15,11 @@
 							</div>
 						</div>
 						<div class="hvr-inner">
-							<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+							<a href="/MovieDetail/Movie/@item.MovieID"> İzle  <i class="fa-solid fa-eye"></i> </a>
 						</div>
 						<div class="title-in">
 							<h6><a href="#">@item.MovieName</a></h6>
-							<p><i class="ion-android-star"></i><span>7.4</span> /10</p>
+							<p><i class="fa-solid fa-clock"></i><span>@item.MovieTime</span> Dakika</p>
 						</div>
 					</div>
 				</div>
