--- a/ShortMovieUI/Views/Shared/MovieLayout.cshtml
+++ b/ShortMovieUI/Views/Shared/MovieLayout.cshtml
@@ -5,7 +5,7 @@
 
 <head>
 	<!-- Basic need -->
-	<title>Open Pediatrics</title>
+	<title>Short Movie</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -13,7 +13,7 @@
 	<link rel="profile" href="#">
 	
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> <!--animate kısmı-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> <!--animate kısmı-->
 
 	
 	<!--Google Font-->
