--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeAdvice/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeAdvice/Default.cshtml
@@ -13,11 +13,11 @@
 						</div>
 						</div>
 						<div class="hvr-inner">
-							<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+							<a href="/MovieDetail/Movie/@item.MovieID"> İzle  <i class="fa-solid fa-eye"></i> </a>
 						</div>
 						<div class="title-in">
 							<h6><a href="#">@item.MovieName</a></h6>
-							<p><i class="ion-android-star"></i><span>7.4</span> /10</p>
+							<p><i class="ion-android-star"></i><span>Önerilen</span> </p>
 						</div>
 					</div>
 				</div>
