--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeSlider/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeSlider/Default.cshtml
@@ -4,7 +4,7 @@
 	@foreach(var item in Model)
 	{
 		<div class="movie-item ">
-			<a href="#">
+			<a href="/MovieDetail/Movie/@item.MovieID">
 				<div class="mv-img">
 			
 					<div style="padding:5px; width:285px; height:437px;">
@@ -14,10 +14,9 @@
 			</div>	</a>
 			<div class="title-in">
 				<div class="cate">
-					<span class="blue"><a href="#">Sci-fi</a></span>
 				</div>
 				<h6><a href="#">@item.MovieName</a></h6>
-				<p><i class="ion-android-star"></i><span>7.4</span> /10</p>
+				<p><i class="ion-android-star"></i><span>@item.Category.CategoryName</span> </p>
 			</div>
 		</div>
 	}
