Mood sayfası bitirildi ve bazı sayfalardaki linkler verildi .

--- a/ShortMovieUI/Views/MovieDetail/AddComment.cshtml
+++ b/ShortMovieUI/Views/MovieDetail/AddComment.cshtml
@@ -5,20 +5,20 @@
         <input type="hidden" name="MovieID" value="@Model.MovieID">
         <div class="row">
             <div class="col-md-6">
-                <input type="text" placeholder="Your name" required name="CommentNameSurname">
+                <input type="text" placeholder="İsminiz" required name="CommentNameSurname">
             </div>
             <div class="col-md-6">
-                <input type="text" placeholder="Your email" required name="CommentMail">
+                <input type="text" placeholder="Mail Adresiniz" required name="CommentMail">
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <textarea name="CommentContent" id="" required placeholder="Message" rows="5"></textarea>
+                <textarea name="CommentContent" id="" required placeholder="Mesajınız " rows="5"></textarea>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <input class="submit" type="submit" value="Submit">
+                <input class="submit" type="submit" value="Gönder">
             </div>
         </div>
     </form>
