--- a/ShortMovieUI/Views/MovieHome/Index.cshtml
+++ b/ShortMovieUI/Views/MovieHome/Index.cshtml
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="social-link">
-				<p>Follow us: </p>
+				<p>Bizi Takip Et: </p>
 				<a href="#"><i class="ion-social-facebook"></i></a>
 				<a href="#"><i class="ion-social-twitter"></i></a>
 				<a href="#"><i class="ion-social-googleplus"></i></a>
@@ -25,8 +25,8 @@
 		<div class="row ipad-width">
 			<div class="col-md-8">
 				<div class="title-hd">
-					<h2>Bunlara Bi Bak</h2>
-					<a href="#" class="viewall">View all <i class="ion-ios-arrow-right"></i></a>
+					<h2>Özel Kategoriler</h2>
+					 <i class="fa fa-"></i>
 				</div>
 				<div class="tabs">
 					<ul class="tab-links">
@@ -47,8 +47,7 @@
 					</div>
 				</div>
 				<div class="title-hd">
-					<h2>on tv</h2>
-					<a href="#" class="viewall">View all <i class="ion-ios-arrow-right"></i></a>
+					<h2>Zaman Kategorileri</h2>
 				</div>
 				<div class="tabs">
 					<ul class="tab-links-2">
