--- a/ShortMovieUI/Views/Shared/Components/_MovieDetailsLast5Movie/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieDetailsLast5Movie/Default.cshtml
@@ -9,9 +9,9 @@
 	{
 		i++;
 		<div class="recent-item">
-			<span>@i</span><h6><a style="font-size:2rem" href="#">@item.MovieName</a></h6>
+			<span>@i</span><h6><a href ="/MovieDetail/Movie/@item.MovieID" style="font-size:2rem" >@item.MovieName</a></h6>
 		</div>
 	}
 	
-	
+	<a >
 </div>
