--- a/ShortMovieUI/Views/MovieHome/AboutPersonal.cshtml
+++ b/ShortMovieUI/Views/MovieHome/AboutPersonal.cshtml
@@ -44,7 +44,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <input class="submit" type="submit" value="Submit">
+                                    <input class="submit" type="submit" value="Gönder">
                                 </div>
                             </div>
                         </form>
