Yönetmenler kısmı tamamlandı.

--- a/ShortMovieUI/Views/Shared/MovieLayout.cshtml
+++ b/ShortMovieUI/Views/Shared/MovieLayout.cshtml
@@ -164,6 +164,12 @@
 							
 						</li>
 						<li class="dropdown first">
+							<a asp-action="Index" asp-controller="MovieDirectors" class="btn btn-default dropdown-toggle lv1">
+								Yönetmenler &nbsp;<i class="fa-solid fa-video"></i>
+							</a>
+
+						</li>
+						<li class="dropdown first">
 							<a asp-action ="ContactUs" asp-controller="MovieContact" class="btn btn-default dropdown-toggle lv1" >
 								İletişim &nbsp;<i class="fa-solid fa-message"></i>
 							</a>
@@ -181,7 +187,6 @@
 								<li class="it-last"><a href="comingsoon.html">Coming soon</a></li>
 							</ul>
 						</li>
-						<li><a href="#">Help</a></li>
 						<li class="loginLink"><a href="#">LOG In</a></li>
 						<li class="btn signupLink"><a href="#">sign up</a></li>
 					</ul>
