--- a/ShortMovieUI/Views/MovieDetail/Movie.cshtml
+++ b/ShortMovieUI/Views/MovieDetail/Movie.cshtml
@@ -38,7 +38,7 @@
 
 						<p style="font-size:20px;line-height: 45px;	 font-weight:300; text-align:center;">
 Bu ve bunun gibi birçok filmi sitemizde bulabilirsin . Lütfen gezinmeye devam edin .						</p>
-						<img src="@Model.MovieImage" alt="">
+						<img style="width:250px;" src="@Model.MovieImage" alt="">
 					</div>
 					<!-- share link -->
 					<div class="flex-it share-tag">
