--- a/ShortMovieUI/Views/Shared/Components/_MovieHomeAdvice/Default.cshtml
+++ b/ShortMovieUI/Views/Shared/Components/_MovieHomeAdvice/Default.cshtml
@@ -1,5 +1,27 @@
 ﻿@model List<Movie>
 
+<style>
+	.mv-img-div {
+		padding: 5px;
+		height: 284px;
+		width: auto;
+	}
+
+	.mv-img-div img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+
+	.movie-items .movie-item {
+		margin-right: 10px;
+	}
+
+	.tabs .tab {
+		margin-left: -15px;
+	}
+</style>
+
 <div id="tab1" class="tab active">
 	<div class="row">
 		<div class="slick-multiItem">
@@ -8,8 +30,8 @@
 				<div class="slide-it">
 					<div class="movie-item">
 						<div class="mv-img">
-							<div style="padding:5px; width:185px; height:284px;">
-								<img src="@item.MovieImage" alt="" style="width:100%; height:100%; object-fit:cover;">
+							<div class="mv-img-div">
+								<img src="@item.MovieImage" alt="">
 						</div>
 						</div>
 						<div class="hvr-inner">
