--- a/ShortMovieUI/Views/Shared/MovieLayout.cshtml
+++ b/ShortMovieUI/Views/Shared/MovieLayout.cshtml
@@ -183,6 +183,11 @@
 							</a>
 							<ul class="dropdown-menu level1">
 								<li><a href="landing.html">Landing</a></li>
+								<li>
+									<a asp-action="movieList" asp-controller="MovieCategory">
+										Film Listesi
+									</a>
+								</li>
 								<li><a href="404.html">404 Page</a></li>
 								<li class="it-last"><a href="comingsoon.html">Coming soon</a></li>
 							</ul>
