Emojis on the "Mood" page are centered.

--- a/ShortMovieUI/Views/MovieMood/Mood.cshtml
+++ b/ShortMovieUI/Views/MovieMood/Mood.cshtml
@@ -33,10 +33,9 @@
 
         .container .card .image {
             position: relative;
-            width: 260px;
             height: 260px;
             top: -40%;
-            left: 8px;
+            text-align: center;
             z-index: 1;
         }
 
