--- a/ShortMovieUI/Views/Shared/AdminLayout.cshtml
+++ b/ShortMovieUI/Views/Shared/AdminLayout.cshtml
@@ -492,6 +492,18 @@
                             <span class="menu-title">Documentation</span>
                         </a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="/AdminCategory/Index">
+                            <i class="typcn typcn-th-menu menu-icon"></i>
+                            <span class="menu-title">Kategoriler</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/AdminDirector/Index">
+                            <i class="typcn typcn-user menu-icon"></i>
+                            <span class="menu-title">Yönetmenler</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <!-- partial -->
