--- a/ShortMovieUI/Views/AdminMovie/Index.cshtml
+++ b/ShortMovieUI/Views/AdminMovie/Index.cshtml
@@ -1,19 +1,21 @@
-﻿@model X.PagedList.IPagedList<EntityLayer.Concrete.Category>
+﻿@model X.PagedList.IPagedList<Movie>
 @using X.PagedList.Mvc.Core
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
 
+
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Kategori Listesi</h4>
+            <h4 class="card-title">Film Listesi</h4>
 
             <!-- Arama Kutusu -->
             <form asp-action="Index" method="get">
                 <div class="form-group">
-                    <input type="text" name="searchString" value="@ViewBag.SearchString" class="form-control" placeholder="Kategori ara..." />
+                    <input type="text" name="searchString" value="@ViewBag.SearchString" class="form-control" placeholder="Film ara..." />
                     <button type="submit" class="btn btn-primary mt-2">Ara</button>
                 </div>
             </form>
@@ -23,28 +25,32 @@
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>Kategori Resim</th>
-                            <th>Kategori İsim</th>
+                            <th>Film Resim</th>
+                            <th>Film İsim</th>
+                            <th>Kategori</th>
+                            <th>Yönetmen</th>
                             <th>Güncelle</th>
                             <th>Sil</th>
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Model)
+                        @foreach (var movie in Model)
                         {
                             <tr>
-                                <td>@item.CategoryID</td>
+                                <td>@movie.MovieID</td>
                                 <td class="py-1">
-                                    <img src="@item.CategoryImage" alt="image" style="width: 50px; height: 50px;" />
+                                    <img src="@movie.MovieImage" alt="image" style="width: 50px; height: 50px;" />
                                 </td>
-                                <td>@item.CategoryName</td>
+                                <td>@movie.MovieName</td>
+                                <td>@movie.Category.CategoryName</td>
+                                <td>@movie.Director.DirectorNameSurname</td>
                                 <td>
-                                    <a class="btn btn-outline-warning" href="/AdminCategory/UpdateCategory/@item.CategoryID">
+                                    <a class="btn btn-outline-warning" href="/AdminMovie/UpdateMovie/@movie.MovieID">
                                         <i class="fa-solid fa-pen-to-square"></i>&nbsp Güncelle
                                     </a>
                                 </td>
                                 <td>
-                                    <a class="btn btn-outline-danger" href="/AdminCategory/DeleteCategory/@item.CategoryID">
+                                    <a class="btn btn-outline-danger" href="/AdminMovie/DeleteMovie/@movie.MovieID">
                                         <i class="fa-solid fa-trash"></i>&nbsp Sil
                                     </a>
                                 </td>
@@ -53,7 +59,7 @@
                     </tbody>
                 </table>
             </div>
-            <a href="/AdminCategory/AddCategory/" class="btn btn-outline-primary btn-block">Yeni Kategori Ekle</a>
+            <a href="/AdminMovie/AddMovie/" class="btn btn-outline-primary btn-block">Yeni Film Ekle</a>
 
             <!-- Paginasyon -->
             <div class="mt-3">
